examples/diagnostics/errors/module_scope_error.flx
// Triggers E039 (MODULE SCOPE)
fn main() {
  module Inner {
    fn value() { 1; }
  }
}
